--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@use 'src/assets/scss/' as *;
+
+html, body {
+    font-size: 16px !important;
+    font-family: Arial, Helvetica, sans-serif;
+}
